<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalles_Producto">

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorEtiqueta"
            android:gravity="center"
            android:text="@string/txtLabel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDisponible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtDisponible"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtCantidad"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtPrecio"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtSubTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtSubTotal"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnAceptar"
            android:onClick="Modificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btnAceptar"
            android:background="@drawable/boton_personalizado"
            android:textSize="20sp"/>
    </LinearLayout>


</RelativeLayout>