<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ln1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="2dp">


                <TextView
                    android:id="@+id/tvProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorEtiqueta"
                    android:gravity="center"
                    android:text="@string/txtProducto"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvPresentacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPresentacion" />

                <TextView
                    android:id="@+id/tvPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPrecio" />

                <TextView
                    android:id="@+id/tvDisponible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtDisponible" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_remove"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/btn_remove" />

                    <EditText
                        android:textStyle="bold"
                        android:id="@+id/etRequeridas"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtCantidad"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="3"
                        tools:targetApi="o" />

                    <Button
                        android:id="@+id/btn_add"
                        android:textStyle="bold"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/btn_add" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
