<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="1dp"
    android:orientation="vertical"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/tvTitulo"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">


            <EditText
                android:maxLength="20"
                android:id="@+id/txtUsuario"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_personalizado"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:ems="10"
                android:hint="@string/etUsuario"
                android:inputType="textPersonName"
                android:padding="4dp"
                tools:targetApi="o" />


            <EditText
                android:maxLength="44"
                android:id="@+id/txtPassword"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_personalizado"
                android:drawableStart="@drawable/ic_pass"
                android:drawableLeft="@drawable/ic_pass"
                android:ems="10"
                android:hint="@string/etPassword"
                android:inputType="textPassword"
                android:padding="4dp"
                tools:targetApi="o" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/boton_personalizado"
                android:gravity="center"
                android:text="@string/btnLogin"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>