<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvClientes"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/txtCliente"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRif"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvClientes"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="185dp"
        android:layout_marginRight="185dp"
        android:text="@string/txtRif"
        android:textStyle="bold"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/tvDireccion"
        android:layout_width="355dp"
        android:layout_height="19dp"
        android:layout_below="@+id/tvRif"
          android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
          android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:text="@string/txtDireccion"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="177dp"
        android:layout_height="23dp"
        android:layout_below="@+id/tvDireccion"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="187dp"
        android:layout_marginRight="187dp"
        android:text="@string/txtTotal"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerProducto"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp">

    </android.support.v7.widget.RecyclerView>
</RelativeLayout>